2002-12-11  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclParseExpr.c (TclParseInteger):  Return 1 for the
	string "0x" (recognize leading "0" as an integer).  [Bug 648441].
	* tests/parseExpr.test (parseExpr-19.1): Test for Bug 648441.

2002-12-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tclWinThrd.c (TclpMasterUnlock):
	* generic/tclThread.c (TclFinalizeThreadData): TclpMasterUnlock
	must exist and be called unconditional of TCL_THREADS. [Bug #651139]

2002-12-08  David Gravereaux  <davygrvy@pobox.com>

	* win/tclWinSock.c (SocketThreadExitHandler, InitSockets):  Check
	that the tsdPtr is valid before dereferencing as we call it from
	the exit handler, too [Bug 650353].  Another WSAStartup() loaded
	version comparison byte swap issue fixed.  Although 0x0101 byte
	swapped is still 0x0101, properly claiming which is major/minor
	is more correct.

2002-12-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclStubInit.c: regen
	* generic/tclIntPlatDecls.h: regen
	* generic/tclInt.decls: added TclWinResetInterface

	* win/tclWin32Dll.c (TclWinResetInterfaces):
	* win/tclWinInit.c (TclpSetInitialEncodings, WinEncodingsCleanup):
	add exit handler that resets the encoding information to a state
	where we can reuse Tcl.  Following these changes, it is possible
	to reuse Tcl (following Tcl_FindExecutable or Tcl_CreateInterp)
	following a Tcl_Finalize.

	* generic/tclIOUtil.c (TclFinalizeFilesystem): reset statics to
	their original values on finalize to allow reuse of the library.

2002-12-04  David Gravereaux  <davygrvy@pobox.com>

	* win/tclWinPipe.c: reverted back to -r1.27 due to numerous test
	failures that need to be resolved first.  The idea was good,
	but the details aren't.
	
2002-12-04  David Gravereaux  <davygrvy@pobox.com>

	* win/tclWinPipe.c (Tcl_WaitPid):  When a process exits with an
	exception, pass this notice on to the caller with a SIG* code
	rather than truncating the exit code and missing the meaning.